Update CI branch patterns to specific GitFlow branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,15 @@ name: 'Continuous Integration'
 on:
   push:
     branches:
-      - '*'
+      - 'feature/*'
+      - 'hotfix/*'
+      - 'release/*'
+      - 'develop'
+      - 'main'
   pull_request:
     branches:
-      - '*'
+      - 'develop'
+      - 'main'
 
 jobs:
   test:
