--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,27 +24,26 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ env.SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ env.PROJECT_ID }}
           export_default_credentials: true
       
-      - name: Authenticate Docker
-        run: |
-          echo ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }} | docker login -u _json_key --password-stdin https://gcr.io
+      - name: Configure Docker to use the gcloud command-line tool as a credential helper
+        run: gcloud auth configure-docker
 
       - name: Build Docker image
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ env.APP_NAME }} . --platform linux/amd64
+          docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.APP_NAME }} . --platform linux/amd64
       
       - name: Push Docker image
         run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ env.APP_NAME }}
+          docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.APP_NAME }}
       
       - name: Deploy to Cloud Run
         run: |
           echo "Deploying to Cloud Run"
           URL=$(gcloud run deploy ${{ env.APP_NAME }} \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ env.APP_NAME }} \
+            --image gcr.io/${{ env.PROJECT_ID }}/${{ env.APP_NAME }} \
             --platform managed \
             --region ${{ env.REGION }} \
             --allow-unauthenticated \
