--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,6 +16,10 @@ jobs:
       SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SA_KEY }}
       APP_NAME: 'flight-delay-api'
       REGION: 'us-central1'
+    
+
+    outputs:
+      url: ${{ steps.deploy.outputs.url }}
 
     steps:
       - name: Checkout code
@@ -46,6 +50,7 @@ jobs:
           docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.APP_NAME }}
       
       - name: Deploy to Cloud Run
+        id: deploy
         run: |
           echo "Deploying to Cloud Run"
           URL=$(gcloud run deploy ${{ env.APP_NAME }} \
@@ -56,18 +61,17 @@ jobs:
             --format 'value(status.url)')
             echo "url=$URL" >> $GITHUB_OUTPUT
             echo "Deployed to $URL"
-
+      
       - name: Set STRESS_URL for Makefile
-        run: echo "STRESS_URL=$URL" >> $GITHUB_ENV
-  
+        run: echo "STRESS_URL=${{steps.deploy.outputs.url}}" >> $GITHUB_ENV
+      
   stress-test:
     runs-on: ubuntu-latest
     needs: deploy
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -77,5 +81,6 @@ jobs:
         run: echo "STRESS_URL=${{ needs.deploy.outputs.url }}"
       - name: Run stress test
         env:
-            STRESS_URL: ${{ needs.deploy.outputs.url }}
-        run: make stress-test STRESS_URL=${{ env.STRESS_URL}}
+          STRESS_URL: ${{ needs.deploy.outputs.url }}
+        run: |
+          make stress-test STRESS_URL=${{ env.STRESS_URL}}
